Fix logo in header on ie11

--- a/src/customizations/logo/_logo.scss
+++ b/src/customizations/logo/_logo.scss
@@ -10,5 +10,9 @@
         @include media('>=tablet') {
             height: auto;
         }
+
+        .ie11 & {
+            max-width: 100%;
+        }
     }
 }
